index button misalignment fixed

--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -89,25 +89,25 @@
     border-radius: 8px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 
-    display:grid;
+    display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 3rem 2rem;
     height: fit-content;
-    gap:5rem;
+    gap: 5rem;
 
     color: black;
 }
 
 .ctaElement{
-    display:flex;
+    display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap:2rem;
+    gap: 2rem;
 }
 
 .ctaTitle{
-    font-size:1.4rem;
+    font-size: 1.4rem;
     /* font-family: Inter; */
     /* text-align: center; */
     text-align: justify;
@@ -122,7 +122,7 @@
     font-size: 1.3rem;
     /* font-family: Inter; */
     padding: 8px 1rem;
-    border-radius:5px;
+    border-radius: 5px;
 }
 
 .arrow{
